bloonix-server (0.27) released at 2015-05-08

    * Improved rest debugging.
    * Fixed uninitialized warnings messages.

bloonix-server (0.26) released at 2015-05-03

    * Removed location caching.

bloonix-server (0.25) released at 2015-04-15

    * Kicked default_locations.

bloonix-server (0.24) released at 2015-03-21

    * ProcManager and FCGI were splittet into 2 modules.
    * A lot of code improvement.

bloonix-server (0.23) released at 2015-03-11

    * Fixed missing function call for Bloonix::SwitchUser in
      bloonix-roll-forward-log.

bloonix-server (0.22) released at 2015-03-10

    * "INACIVE" typo fixed.

bloonix-server (0.21) released at 2015-03-10

    * Service and host actions (active, notification, acknowlegded)
      will now all reported.

bloonix-server (0.20) released at 2015-03-09

    * Nagios stats can now be parsed and stored.
    * ServiceChecker now except __DIE__.
    * Level of message 'no postdata received' changed to warning.
    * Path /srv/bloonix/server removed.
    * bloonix-roll-forward-log can now be executed as user bloonix
      and user root.
    * Force the status INFO for all services which are not OK
      if maintenance mode is active.

bloonix-server (0.19) released at 2015-02-16

    * Kicked sth_cache_enabled from database config.

bloonix-server (0.18) released at 2015-02-16

    * Add parameter sth_cache_enabled to the database config.

bloonix-server (0.17) released at 2015-02-14

    * Removed typecasting in bloonix-roll-forward-log.
    * Transfer the database configuration to /etc/bloonix/database/main.conf.

bloonix-server (0.16) released at 2015-01-29

    * Fixed redirect section and kicked sms_to.

bloonix-server (0.15) released at 2015-01-26

    * Fixed permissions of hosts.conf that is generated
      by bloonix-update-agent-host-config.

bloonix-server (0.14) released at 2015-01-13

    * Kicked dependency postfix.

bloonix-server (0.13) released at 2015-01-02
