@@ -1,3 +1,8 @@
+bloonix-server (0.28) released at 2015-XX-XX
+
+    * Prevent to log FATAL messages with a stack trace if the
+      request structure of the agent was invalid.
+
 bloonix-server (0.27) released at 2015-05-08
 
     * Improved rest debugging.
